--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+/* Contents styles */
 body {
     margin: 0;
     padding: 0;
@@ -7,37 +8,55 @@ body {
 /* Font styles */
 h1, h2, h3, h4, h5, h6, p, table, li, a {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-bottom: 1rem;
+    margin: 1rem 0;
     color: #ffffff;
 }
 
 h1 {
     font-size: 2.5rem;
     font-weight: bold;
-    margin-bottom: 1rem;
-    letter-spacing: 1px;
+    letter-spacing: 0.2rem;
+}
+
+h2, h3 {
+    position: relative;
+    background-color: #ffffff;
+    margin: 40px;
+    z-index: 1;
+}
+
+h2::before, h3::before {
+    content: "";
+    position: absolute;
+    top: -20px;
+    left: -20px;
+    width: 100%;
+    height: 100%;
+    background-color: #00aaf0;
+    z-index: -1;
+}
+
+h2, h3 {
+    background-color: #ffffff;
+    color: #000000;
+    z-index: 2;
 }
 
 h2 {
     font-size: 2rem;
     font-weight: bold;
-    margin-bottom: 0.75rem;
-    border-bottom: 2px solid #ccc;
     padding-bottom: 0.25rem;
 }
 
 h3 {
     font-size: 1.75rem;
     font-weight: bold;
-    margin-bottom: 0.5rem;
-    border-bottom: 1px solid #ccc;
     padding-bottom: 0.25rem;
 }
 
 h4 {
     font-size: 1.5rem;
     font-weight: bold;
-    margin-bottom: 0.5rem;
 }
 
 p {
@@ -68,4 +87,9 @@ th, td {
     border: 1px solid #ccc;
     padding: 0.75rem;
     text-align: left;
+}
+
+#footer {
+    background-color: #00aaf0;
+    color: #000000;
 }
