--- a/styles/style.css
+++ b/styles/style.css
@@ -19,33 +19,23 @@ h1 {
 }
 
 h2, h3 {
-    position: relative;
-    background-color: #ffffff;
-    margin: 40px;
-    z-index: 1;
+   margin: 1rem;
+   padding: 1.5rem;
+   background: #1361ba;
+   color: #000000;
+   position: relative;
+   z-index: 1;
 }
 
-h2::before, h3::before {
-    content: "";
-    position: absolute;
-    top: -20px;
-    left: -20px;
-    width: 100%;
-    height: 100%;
-    background-color: #00aaf0;
-    z-index: -1;
-}
-
-h2, h3 {
-    background-color: #ffffff;
-    color: #000000;
-    z-index: 2;
-}
-
-h2 {
-    font-size: 2rem;
-    font-weight: bold;
-    padding-bottom: 0.25rem;
+h2::after, h3::after {
+   background-color: #ffffff;
+   content: '';
+   position: absolute;
+   top: 1rem;
+   left: 1rem;
+   width: 100%;
+   height: 100%;
+   z-index: -1;
 }
 
 h3 {
