--- a/styles/style.css
+++ b/styles/style.css
@@ -2,64 +2,57 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #000000;
+    background-color: #ffffff;
+}
+
+.contents {
+    margin: 0 1rem;
+    font-size: 1rem;
+    border: solid 1px #000000;
+    border-radius: 0 0 10px 10px;
 }
 
 /* Font styles */
 h1, h2, h3, h4, h5, h6, p, table, li, a {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 1rem 0;
-    color: #ffffff
+    margin: 1rem;
+    color: #000000;
 }
 
 header {
     margin: 0;
     padding: 1rem;
-    background-color: #ffffff;
+    background-color: #000000;
 }
 
 h1 {
+    margin: 0;
+    padding: 0.5rem;
     font-size: 3rem;
     font-weight: bold;
     letter-spacing: 0.2rem;
     color: #1361ba;
+    background-color: #ffffff;
+    display:inline-block;
 }
 
-h2, h3 {
-   margin: 1rem;
-   padding: 1.5rem;
-   background: #1361ba;
-   color: #000000;
-   position: relative;
-   z-index: 1;
-}
-
-h2::after, h3::after {
-   background-color: #ffffff;
-   content: '';
-   position: absolute;
-   top: 1rem;
-   left: 1rem;
-   width: 100%;
-   height: 100%;
-   z-index: -1;
+h2{
+   margin: 1rem 1rem 0 1rem;
+   padding: 1rem;
+   font-size: 2rem;
+   border-radius: 10px 10px 0 0;
+   font-weight: bold;
+   background: #b4caf7;
+   color: #1361ba;
 }
 
 h3 {
     font-size: 1.75rem;
-    font-weight: bold;
-    padding-bottom: 0.25rem;
 }
 
 h4 {
     font-size: 1.5rem;
     font-weight: bold;
-}
-
-p {
-    font-size: 1rem;
-    line-height: 1.6;
-    margin-bottom: 1rem;
 }
 
 a {
@@ -92,6 +85,6 @@ footer {
     background-color: #1361ba;
 }
 
-#footer {
+small {
     color: #ffffff;
 }
