--- a/styles/style.css
+++ b/styles/style.css
@@ -5,10 +5,26 @@ body {
     background-color: #ffffff;
 }
 
+header {
+    margin: 0;
+    border-bottom: solid 1px #888888;
+}
+
+footer {
+    margin: 1rem 0 0 0;
+    padding: 1rem;
+    text-align: center;
+    border-top: solid 1px #888888;
+}
+
+small {
+    color: #888888;
+}
+
 .contents {
     margin: 0 1rem;
     font-size: 1rem;
-    border: solid 1px #000000;
+    border: solid 1px #888888;
     border-radius: 0 0 10px 10px;
 }
 
@@ -16,22 +32,15 @@ body {
 h1, h2, h3, h4, h5, h6, p, table, li, a {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 1rem;
-    color: #000000;
-}
-
-header {
-    margin: 0;
-    padding: 1rem;
-    background-color: #000000;
+    color: #444444;
 }
 
 h1 {
     margin: 0;
     padding: 0.5rem;
     font-size: 3rem;
-    font-weight: bold;
     letter-spacing: 0.2rem;
-    color: #1361ba;
+    color: #888888;
     background-color: #ffffff;
     display:inline-block;
 }
@@ -40,10 +49,9 @@ h2{
    margin: 1rem 1rem 0 1rem;
    padding: 1rem;
    font-size: 2rem;
+   border: solid 1px #888888;
    border-radius: 10px 10px 0 0;
    font-weight: bold;
-   background: #b4caf7;
-   color: #1361ba;
 }
 
 h3 {
@@ -77,14 +85,4 @@ th, td {
     border: 1px solid #ccc;
     padding: 0.75rem;
     text-align: left;
-}
-
-footer {
-    margin: 0;
-    padding: 1rem;
-    background-color: #1361ba;
-}
-
-small {
-    color: #ffffff;
 }
