--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,7 @@ header {
 }
 
 main {
+    margin: 0 0.5rem 0 0.5rem;
     padding-top: 6rem;
     display: flex;
     flex-direction: column;
@@ -29,7 +30,12 @@ main {
 
 section {
     margin: 0.5rem;
-    width: 60rem;
+    /*
+     * width を 100% にしておき、max-width で最大幅を指定することで、
+     * 画面幅が狭い場合に自動的に縮むようにする。
+     */
+    width: 100%;
+    max-width: 60rem;
     font-size: 1rem;
     border: solid 1px #888888;
 }
