--- a/styles/style.css
+++ b/styles/style.css
@@ -7,13 +7,12 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #ffffff;
+    background-color: deepskyblue;
 }
 
 header {
     width: 100%;
-    border-bottom: solid 1px #888888;
-    background-color: #ffffff;
+    background-color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -29,38 +28,35 @@ main {
 }
 
 section {
-    width: 100%;
-    background-color: #00aaff;
-    display: flex;
-    justify-content: center;
-}
-
-.viewport-content {
     /* 
      * width を 100% にしておき、max-width で最大幅を指定することで、
      * 画面幅が狭い場合に自動的に縮むようにする。
      */
     width: 100%;
-    max-width: 60rem; /* 小さい画面でも意味のある最大幅にするため rem を使用 */
+    max-width: 60rem;
     min-height: 100vh;
     font-size: 1rem;
-    color: #ffffff;
-    text-align: center;
+    color: white;
+    background-color: deepskyblue;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 footer {
     padding: 1rem;
     width: 100%;
     text-align: center;
-    border-top: solid 1px #888888;
-    background-color: #ffffff;
+    background-color: olivedrab;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
 small {
-    color: #888888;
+    color: white;
 }
 
 /* Font styles */
@@ -68,33 +64,39 @@ h1 {
     margin: 0;
     padding: 0.5rem;
     font-size: 4rem;
-    color: #888888;
-    background-color: #ffffff;
+    color: olivedrab;
+    background-color: white;
 }
 
 h2 {
-   margin: 1rem 1rem 0 1rem;
-   font-size: 3rem;
+   margin: 1rem 1rem 0.5rem 1rem;
+   font-size: 4rem;
    font-weight: bold;
 }
 
+h2.slogan {
+    font-size: 9rem;
+}
+
 h3 {
-    font-size: 2rem;
+    margin: 1rem 1rem 0.5rem 1rem;
+    font-size: 3rem;
 }
 
 h4 {
-    font-size: 1.5rem;
+    margin: 1rem 1rem 0.5rem 1rem;
+    font-size: 2rem;
     font-weight: bold;
 }
 
 /* Link styles */
 a {
-    color: #555555;
+    color: black;
     text-decoration: underline;
 }
 
 a:hover {
-    color: #ff9500;
+    color: saddlebrown;
     text-decoration: none;
 }
 
@@ -110,9 +112,14 @@ li {
     padding: 1rem;
     width: 10rem;
     height: 10rem;
-    color: #00aaff;
-    background-color: #ffffff;
+    color: deepskyblue;
+    font-size: 1.5rem;
+    font-weight: bold;
+    background-color: white;
     border-radius: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Table styles */
@@ -121,8 +128,8 @@ table {
 }
 
 th, td {
-    border: 1px solid #ccc;
+    border: 1px solid white;
     padding: 0.75rem;
     text-align: left;
-    word-break:break-word
+    word-break: break-word;
 }
