--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,8 @@
+@charset "UTF-8";
 /* Contents styles */
 :root {
     scroll-padding: 5rem;
-    font-family: 'Consolas', sans-serif;
+    font-family: 'Century Gothic', sans-serif;
 }
 
 body {
@@ -12,7 +13,7 @@ body {
 
 header {
     width: 100%;
-    background-color: white;
+    background-color: deepskyblue;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -21,6 +22,7 @@ header {
 
 main {
     padding-top: 5rem;
+    background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -36,13 +38,22 @@ section {
     max-width: 60rem;
     min-height: 100vh;
     font-size: 1rem;
-    color: white;
-    background-color: deepskyblue;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+}
+
+section.back_skyblue {
+    max-width: 100%;
+    color: white;
+    background-color: deepskyblue;
+}
+
+section.back_white {
+    color: black;
+    background-color: white;
 }
 
 footer {
@@ -61,9 +72,10 @@ small {
 
 /* Font styles */
 h1 {
-    margin: 0;
-    padding: 0.5rem;
-    font-size: 4rem;
+    margin: 1rem;
+    padding: 1rem;
+    font-size: 6vw;
+    font-weight: bold;
     color: olivedrab;
     background-color: white;
 }
@@ -72,21 +84,25 @@ h2 {
    margin: 1rem 1rem 0.5rem 1rem;
    font-size: 4rem;
    font-weight: bold;
+   color: deepskyblue;
 }
 
 h2.slogan {
     font-size: 9rem;
+    color: white;
 }
 
 h3 {
     margin: 1rem 1rem 0.5rem 1rem;
     font-size: 3rem;
+    color: deepskyblue;
 }
 
 h4 {
     margin: 1rem 1rem 0.5rem 1rem;
     font-size: 2rem;
     font-weight: bold;
+    color: deepskyblue;
 }
 
 /* Link styles */
@@ -112,15 +128,41 @@ li {
     padding: 1rem;
     width: 10rem;
     height: 10rem;
-    color: deepskyblue;
     font-size: 1.5rem;
     font-weight: bold;
+    color: black;
     background-color: white;
+    border: 5px solid black;
     border-radius: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
+li.html_css {
+    color: white;
+    background-color: MediumSeaGreen;
+    border: 5px solid darkgreen
+}
+
+li.js {
+    color: white;
+    background-color: royalblue;
+    border: 5px solid darkblue
+}
+
+li.php {
+    color: white;
+    background-color: purple;
+    border: 5px solid indigo;
+}
+
+li.sql {
+    color: white;
+    background-color: SteelBlue;
+    border: 5px solid orange;
+}
+
 
 /* Table styles */
 table {
@@ -128,7 +170,7 @@ table {
 }
 
 th, td {
-    border: 1px solid white;
+    border: 1px solid black;
     padding: 0.75rem;
     text-align: left;
     word-break: break-word;
