--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* Contents styles */
 :root {
-    scroll-padding: 5rem;
+    scroll-padding: 10rem;
     font-family: 'Century Gothic', sans-serif;
 }
 
@@ -12,6 +12,7 @@ body {
 }
 
 header {
+    padding: 0 2vw;
     width: 100%;
     background-color: deepskyblue;
     display: flex;
@@ -37,36 +38,61 @@ section {
     width: 100%;
     max-width: 60rem;
     min-height: 100vh;
+    margin-bottom: 5rem;
     font-size: 1rem;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    padding: 0 1rem;
+}
+
+section.title_back {
+    max-width: 100%;
+    color: white;
+    background: linear-gradient(deepskyblue, green);
     justify-content: center;
     align-items: center;
 }
 
-section.back_skyblue {
-    max-width: 100%;
-    color: white;
-    background-color: deepskyblue;
+section.back_white {
+    color: dimgray;
+    background-color: white;
 }
 
-section.back_white {
-    color: black;
-    background-color: white;
+section.portfolio {
+    max-width: 100%;
+    margin-bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background: linear-gradient(green, saddlebrown);
+}
+
+section.portfolio div {
+    width: 100%;
+    max-width: 60rem;
+    min-height: 100vh;
+    font-size: 1rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 0 1rem;
 }
 
 footer {
     padding: 1rem;
     width: 100%;
     text-align: center;
-    background-color: olivedrab;
+    background-color: saddlebrown;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
 small {
+    font-size: 1rem;
     color: white;
 }
 
@@ -76,38 +102,43 @@ h1 {
     padding: 1rem;
     font-size: 6vw;
     font-weight: bold;
-    color: olivedrab;
+    color: deepskyblue;
     background-color: white;
 }
 
 h2 {
-   margin: 1rem 1rem 0.5rem 1rem;
+   margin: 1rem 0.5rem 0.5rem 0;
    font-size: 4rem;
    font-weight: bold;
-   color: deepskyblue;
+   color: green;
 }
 
 h2.slogan {
-    font-size: 9rem;
+    font-size: 8rem;
+    color: white;
+}
+
+section.portfolio h2 {
     color: white;
 }
 
 h3 {
-    margin: 1rem 1rem 0.5rem 1rem;
+    margin: 2rem 0;
     font-size: 3rem;
-    color: deepskyblue;
+    color: dimgray;
 }
 
 h4 {
-    margin: 1rem 1rem 0.5rem 1rem;
+    margin: 2rem 0;
     font-size: 2rem;
     font-weight: bold;
-    color: deepskyblue;
+    color: dimgrey;
 }
 
 /* Link styles */
 a {
     color: black;
+    font-weight: bold;
     text-decoration: underline;
 }
 
@@ -116,11 +147,16 @@ a:hover {
     text-decoration: none;
 }
 
+nav a {
+    color: white;
+    text-decoration: underline;
+}   
+
 /* List styles */
 ul {
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
+    overflow-y: auto;
 }
 
 li {
@@ -130,10 +166,11 @@ li {
     height: 10rem;
     font-size: 1.5rem;
     font-weight: bold;
-    color: black;
+    color: dimgray;
     background-color: white;
-    border: 5px solid black;
+    border: 5px solid dimgray;
     border-radius: 1rem;
+    box-shadow: 1rem 1rem 0.5rem lightgray;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -142,13 +179,13 @@ li {
 li.html_css {
     color: white;
     background-color: MediumSeaGreen;
-    border: 5px solid darkgreen
+    border: 5px solid darkgreen;
 }
 
 li.js {
     color: white;
     background-color: royalblue;
-    border: 5px solid darkblue
+    border: 5px solid darkblue;
 }
 
 li.php {
@@ -163,10 +200,17 @@ li.sql {
     border: 5px solid orange;
 }
 
+section.portfolio li{
+    box-shadow: 1rem 1rem 0.5rem darkgreen;
+}
+
 
 /* Table styles */
 table {
-    margin: 1rem;
+    margin: 0.5rem 0;
+    width: calc(100% - 1rem);
+    table-layout: fixed;
+    overflow-wrap: break-word;
 }
 
 th, td {
@@ -174,4 +218,6 @@ th, td {
     padding: 0.75rem;
     text-align: left;
     word-break: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
 }
