--- a/styles/style.css
+++ b/styles/style.css
@@ -15,8 +15,9 @@ header {
     padding: 0 2vw;
     width: 100%;
     background-color: white;
+    box-shadow: 0 0 1rem 0 gray;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     position: fixed;
 }
@@ -50,6 +51,7 @@ section.title__back {
     max-width: 100%;
     color: white;
     background: linear-gradient(deepskyblue, green);
+    box-shadow: inset 0 1rem 0 0 darkgreen;
     justify-content: center;
     align-items: center;
 }
@@ -67,7 +69,7 @@ section.portfolio {
     justify-content: center;
     align-items: center;
     color: white;
-    background: linear-gradient(green, saddlebrown);
+    background-color: forestgreen;
 }
 
 section.portfolio div {
@@ -84,7 +86,7 @@ section.portfolio div {
 footer {
     padding: 1vw;
     width: 100%;
-    background-color: saddlebrown;
+    background-color: peru;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -109,7 +111,7 @@ h2 {
    margin: 1rem 0.5rem 0.5rem 0;
    font-size: 4rem;
    font-weight: bold;
-   color: green;
+   color: dimgray;
 }
 
 h2.slogan {
@@ -139,6 +141,11 @@ a {
     color: black;
     font-weight: bold;
     text-decoration: underline;
+}
+
+header a:hover {
+    color: deepskyblue;
+    text-decoration: none;
 }
 
 a:hover {
