--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* Contents styles */
 :root {
-    scroll-padding: 10rem;
+    scroll-padding: 5rem;
     font-family: 'Century Gothic', sans-serif;
 }
 
@@ -22,7 +22,7 @@ header {
 }
 
 main {
-    padding-top: 10rem;
+    padding-top: 5rem;
     background-color: white;
     display: flex;
     flex-direction: column;
@@ -107,12 +107,30 @@ small {
     main {
         padding-top: 8rem;
     }
+
+    li:hover{
+        pointer-events: none;
+    }
+
+    ul {
+        display: flex;
+        overflow-y: scroll;
+    }
 }
 
 /* SmartPhone Contents styles */
 @media screen and (max-width:500px) {
     main {
         padding-top: 7rem;
+    }
+
+    li:hover{
+        pointer-events: none;
+    }
+
+    ul {
+        display: flex;
+        overflow-y: scroll;
     }
 }
 
