--- a/styles/layout/header.css
+++ b/styles/layout/header.css
@@ -1,21 +1,54 @@
 @charset "UTF-8";
 /* headder styles */
 header {
-    padding: 0 2vw;
-    width: 100%;
-    background-color: white;
-    border-radius: 0 0 2rem 2rem;
-    display: flex;
-    grid-area: header;
-    justify-content: space-evenly;
-    align-items: center;
-    position: fixed;
-    z-index: 100;
+  padding: 0 2vw;
+  width: 100%;
+  border-radius: 0 0 2rem 2rem;
+  background-color: white;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: fixed;
+  z-index: 100;
 }
 
-/* Image styles */
 header img[src$=".svg"] {
     transform: scale(1.8);
+}
+
+/* nav breadcrumb styles */
+nav#breadcrumb {
+  grid-area: breadcrumb;
+  width: 100%;
+  padding: 8rem 0 0 2rem;
+  background-color: lightblue;
+  border-radius: 0 0 2rem 2rem;
+  display: flex;
+  justify-content: left;
+}
+nav#breadcrumb ol li {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: inline-block;
+}
+
+/* header link styles */
+header a {
+  border: 1px solid dimgray;
+  border-radius: 2rem;
+  padding: 0.5rem;
+  width: 6rem;
+  color: dimgray;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+} 
+header a:hover {
+  border-radius: 2rem;
+  color: white;
+  background-color: dimgrey;
+  font-weight: bold;
 }
 
 /* Tablet Contents Style */
@@ -30,33 +63,4 @@ header img[src$=".svg"] {
     header img[src$=".svg"] {
         transform: scale(1);
     }
-}
-
-/* nav breadcrumb styles */
-nav#breadcrumb {
-  width: 100%;
-  padding: 8rem 0 0 2rem;
-  background-color: lightblue;
-  border-radius: 0 0 2rem 2rem;
-  display: flex;
-  justify-content: left;
-  grid-area: breadcrumb;
-}
-nav#breadcrumb ol li {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    display: inline-block;
-}
-
-/* header link styles */
-header a {
-    padding: 0.5rem;
-    color: dimgray;
-    text-decoration: none;
-} 
-header a:hover {
-    color: white;
-    background-color: dimgrey;
-    font-weight: bold;
 }
