--- a/styles/layout/footer.css
+++ b/styles/layout/footer.css
@@ -14,7 +14,7 @@ footer {
 
 div#footer__copy {
   grid-area: footer__copy;
-  padding: 0 2rem 0 0;
+  padding: 0 2rem 0 2rem;
   font-size: 1.2rem;
   color: white;
   display: flex;
@@ -57,4 +57,21 @@ footer a:hover {
   color: dimgray;
   background-color: white;
   font-weight: bold;
+}
+
+/* Tablet Contents Style */
+@media screen and (max-width:1280px) {
+  footer img[src$=".svg"] {
+    transform: scale(0.8);
+  }
+
+}
+
+/* SmartPhone Image styles */
+@media screen and (max-width:500px) {
+  footer {
+    display: flex;
+    flex-direction: column;
+  }
+
 }
