update: SP版フッター、左側白線消す、アイコン並列化と枠消す

--- a/styles/base/base.css
+++ b/styles/base/base.css
@@ -13,8 +13,7 @@ body {
 
 /* Contents styles */
 main {
-
-    background-color: white;
+    background-color: whitesmoke;
     color: dimgray;
     display: flex;
     flex-direction: column;
