--- a/styles/layout/header.css
+++ b/styles/layout/header.css
@@ -17,23 +17,10 @@ header img[src$=".svg"] {
   transform: scale(1.8);
 }
 
-/* nav breadcrumb styles */
-nav#breadcrumb {
-  width: 100%;
-  padding: 8rem 0 0 2rem;
-  background-color: lightblue;
-  border-radius: 0 0 2rem 2rem;
+div#header__nav__contents, div#header__nav__links {
   display: flex;
-  justify-content: left;
-}
-nav#breadcrumb ol li {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  display: inline-block;
 }
 
-/* header link styles */
 header a {
   border: 1px solid dimgray;
   border-radius: 2rem;
@@ -51,15 +38,64 @@ header a:hover {
   font-weight: bold;
 }
 
+nav {
+  display: flex;
+}
+
+div#header__nav__links a {
+  padding: 0.5rem 0 0.5rem 0;
+  border: 0;
+}
+div#header__nav__links a:hover {
+  filter: invert(100%) sepia(85%) saturate(262%) hue-rotate(248deg) brightness(114%) contrast(101%);
+}
+div#header__nav__links img[src$=".svg"] {
+  transform: scale(1.5);
+}
+
+/* nav breadcrumb styles */
+nav#breadcrumb {
+  width: 100%;
+  padding: 8rem 0 0 2rem;
+  background-color: lightblue;
+  border-radius: 0 0 2rem 2rem;
+  display: flex;
+  justify-content: left;
+}
+nav#breadcrumb ol li {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: inline-block;
+}
+
 /* Tablet Contents Style */
 @media screen and (max-width:1280px) {
   header img[src$=".svg"] {
       transform: scale(1.2);
   }
 
-  header a {
-    width: 4rem;
-    font-size: 1rem;
+  header a:hover {
+    border-radius: 2rem;
+    color: dimgray  ;
+    background-color: white;
+    font-weight: normal;
+  }
+
+  nav {
+    display: block;
+  }
+
+  div#header__nav__links a {
+    border: 0;
+    background-color: white;
+    font-weight: normal;
+  }
+
+  div#header__nav__links a:hover {
+    border: 0;
+    background-color: white;
+    font-weight: normal;
   }
 }
 
@@ -77,6 +113,9 @@ header a:hover {
   /*
    * ハンバーガーメニュー
    */
+  div.nav__wrapper {
+    --nav__icon-top: 20px;
+  }
   .nav__wrapper {
     position: relative;
   }
@@ -84,9 +123,8 @@ header a:hover {
     width: 40px;
     height: 30px;
     position: fixed;
-    --nav__icon-top: 20px;
     top: var(--nav__icon-top);
-    right: 20px;
+    left: 20px;
     cursor: pointer;
     z-index: 3;
     display: inline-block;
@@ -125,8 +163,8 @@ header a:hover {
   }
   /* メニュー本体 */
   nav {
+    margin: var(--nav__icon-top) 0 0 0;
     position: fixed;
-    top: var(--nav__icon-top);
     right: 100%;
     width: 100%;
     height: 100%;
@@ -150,6 +188,7 @@ header a:hover {
     border-radius: 0;
     padding: 0.5rem;
     width: 100%;
+    font-size: 2rem;
     color: dimgray;
     text-align: center;
     text-decoration: none;
@@ -160,8 +199,5 @@ header a:hover {
     background-color: inherit;
     color: inherit;
     font-weight: inherit;
-  }
-  header a {
-    right: 0;
   }
 }
