update: ヘッダーフッター修整

--- a/styles/base/base.css
+++ b/styles/base/base.css
@@ -104,6 +104,14 @@ th, td {
     white-space: normal;
 }
 
+/* SVG Contents Style */
+.icon {
+  width: 24px;
+  height: 24px;
+  display:block;
+  justify-content: center;
+}
+
 /* Tablet Contents Style */
 @media screen and (max-width:1280px) {
   :root {
