--- a/styles/layout/footer.css
+++ b/styles/layout/footer.css
@@ -58,10 +58,6 @@ footer a:hover {
   background-color: white;
   font-weight: bold;
 }
-div#footer__nav__links a {
-  border: 0;
-  filter: invert(100%) sepia(85%) saturate(262%) hue-rotate(248deg) brightness(114%) contrast(101%);
-}
 
 /* Tablet Contents Style */
 @media screen and (max-width:1280px) {
@@ -97,12 +93,13 @@ div#footer__nav__links a {
   }
   div#footer__nav__links {
     width: 100%;
-    flex-direction: row;
-    justify-content: space-around;
   }
   div#footer__nav__links a {
     margin: 1rem 0.5rem 0 0.5rem;
     border: 0;
     transform: scale(1.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
